# Neuro_computing_spiking_neural_network

./: README.md  dev_runner.py  requirements.txt  run.py  run_mini.py
docs/: conversion.md  troubleshooting.md
examples/: basic.py  buildmany.py
experiments/: opt_catdog.py  param_tune.py  pool.py  squeeze.py
old_work/carlsim_projects/MNIST_model/: CMakeLists.txt
old_work/carlsim_projects/MNIST_model/inc/: Network.h  SimMNIST.h  Simulation.h  StimulusWrapper.h  SyntheticSimulation.h  basicNetworks.h  mnistUtils.h  modelEvaluations.h  prototypes.h
old_work/carlsim_projects/MNIST_model/input/: squares_ground_truth.csv  test_ground_truth.csv
old_work/carlsim_projects/example_model/: Makefile  example_model
old_work/carlsim_projects/example_model/src/: main_example_model.cpp
old_work/carlsim_projects/hello_world/: Makefile
